--- a/Changes
+++ b/Changes
@@ -4,7 +4,10 @@ Revision history for Perl extension PBS::Logs.
 	- original version; created by h2xs 1.23 with options
 		--compat-version=5.8.0 -XAn PBS::Logs
 
-0.02   Wed Jul 27 10:56:14 PDT 2005
+0.02  Wed Jul 27 10:56:14 PDT 2005
 	- gave the test scripts more "descriptive" names
 	- changed the compat-version to 5.6
 	- have message_hash() honor some quoting of values
+
+0.03  Mon Oct 13 11:03:40 PDT 2008
+	- mostly document changes
