--- a/Changes
+++ b/Changes
@@ -15,3 +15,6 @@ Revision history for Perl extension PBS::Logs.
 0.04  Tue Apr 28 16:07:16 PDT 2009
 	- added the current() method to return the current PBS "record"
 
+0.05  Wed Nov 24 10:26:46 PST 2010
+	- handle accounting records with key=value fields where the value
+	  may have an '=' within it (e.g. Resource_List.nodes=1:ppn=2)
